[package]
name = "ur20"
description = "Rust library for the Weidmüller u-remote IP20 system"
version = "0.1.0"
authors = ["Markus Kohlhase <markus.kohlhase@slowtec.de>"]
license = "MIT/Apache-2.0"
readme = "README.md"
homepage = "https://github.com/slowtec/rust-ur20"
repository = "https://github.com/slowtec/rust-ur20"
keywords = ["fieldbus"]

[badges]
travis-ci = { repository = "slowtec/rust-ur20" }
