[package]
name = "ur20"
description = "Rust library for the Weidmüller u-remote IP20 system"
version = "0.5.1"
authors = ["slowtec GmbH", "Markus Kohlhase <markus.kohlhase@slowtec.de>"]
license = "MIT/Apache-2.0"
readme = "README.md"
homepage = "https://github.com/slowtec/ur20"
repository = "https://github.com/slowtec/ur20"
keywords = ["fieldbus", "industrial", "io"]
edition = "2018"

[dependencies]
byteorder = "1"
lazy_static = "1.1"
num-traits = "0.2"
num-derive = "0.2"

[badges]
travis-ci = { repository = "slowtec/ur20" }
appveyor = { repository = "slowtec/ur20" }
maintenance = { status = "actively-developed" }
